; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_buf_item.c_xfs_buf_item_copy_iovec.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_buf_item.c_xfs_buf_item_copy_iovec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_log_vec = type { i32 }
%struct.xfs_log_iovec = type { i32 }
%struct.xfs_buf = type { i32 }

@XFS_BLF_CHUNK = common dso_local global i32 0, align 4
@XLOG_REG_TYPE_BCHUNK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xfs_log_vec*, %struct.xfs_log_iovec**, %struct.xfs_buf*, i32, i32, i32)* @xfs_buf_item_copy_iovec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xfs_buf_item_copy_iovec(%struct.xfs_log_vec* %0, %struct.xfs_log_iovec** %1, %struct.xfs_buf* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.xfs_log_vec*, align 8
  %8 = alloca %struct.xfs_log_iovec**, align 8
  %9 = alloca %struct.xfs_buf*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.xfs_log_vec* %0, %struct.xfs_log_vec** %7, align 8
  store %struct.xfs_log_iovec** %1, %struct.xfs_log_iovec*** %8, align 8
  store %struct.xfs_buf* %2, %struct.xfs_buf** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %13 = load i32, i32* %11, align 4
  %14 = load i32, i32* @XFS_BLF_CHUNK, align 4
  %15 = mul nsw i32 %13, %14
  %16 = load i32, i32* %10, align 4
  %17 = add nsw i32 %16, %15
  store i32 %17, i32* %10, align 4
  %18 = load %struct.xfs_log_vec*, %struct.xfs_log_vec** %7, align 8
  %19 = load %struct.xfs_log_iovec**, %struct.xfs_log_iovec*** %8, align 8
  %20 = load i32, i32* @XLOG_REG_TYPE_BCHUNK, align 4
  %21 = load %struct.xfs_buf*, %struct.xfs_buf** %9, align 8
  %22 = load i32, i32* %10, align 4
  %23 = call i32 @xfs_buf_offset(%struct.xfs_buf* %21, i32 %22)
  %24 = load i32, i32* %12, align 4
  %25 = load i32, i32* @XFS_BLF_CHUNK, align 4
  %26 = mul nsw i32 %24, %25
  %27 = call i32 @xlog_copy_iovec(%struct.xfs_log_vec* %18, %struct.xfs_log_iovec** %19, i32 %20, i32 %23, i32 %26)
  ret void
}

declare dso_local i32 @xlog_copy_iovec(%struct.xfs_log_vec*, %struct.xfs_log_iovec**, i32, i32, i32) #1

declare dso_local i32 @xfs_buf_offset(%struct.xfs_buf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
